--- a/week 1/portfolio/contact.html
+++ b/week 1/portfolio/contact.html
@@ -1,13 +1,54 @@
+
+  // contact.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aamir Web Developer</title>
+ 
 </head>
 <body>
-    <header> 
-        <h1> Contact</h1>
+    <header>
+        <h1>Aamir Portfolio</h1>
+        <nav>
+            <a href="./">Home</a>
+            <a href="./projects.html">Projects</a>
+            <a href="./contact.html">Contact</a>
+        </nav>
+        <hr>
     </header>
+    <main>
+        <h2>Contact</h2>
+        <p>Please use the form below to contact me</p>
+        <form action="./thank-you.html" method="get">
+            <fieldset>
+                <legend>Your Details</legend>
+                <label for="name">Your Name</label>
+                <input type="text" id="name">
+                <br>
+                <label for="email">Your Email</label>
+                <input type="email" id="email">
+                <br>
+                <label for="phone">Your Phone</label>
+                <input type="tel" id="phone">
+            </fieldset>
+            <fieldset>
+                <legend>Your Message</legend>
+                <label for="subject">Subject</label>
+                <input type="text" id="subject">
+                <br>
+                <label for="message">Your Message</label>
+                <textarea id="message" rows="5" cols="30"></textarea>
+            </fieldset>
+            <button>Send Message</button>
+        </form>
+    </main>
+    <footer>
+        <p>Email: <a href="Aamirdeveloperaamir@gmail.com">aamirdeveloper.pk</a></p>
+        <p>Copyright 2025 | All Rights Reserved | Aamir rind</p>
+    </footer>
+</body>
+</html>
 </body>
 </html>
