--- a/week 1/portfolio/index.html
+++ b/week 1/portfolio/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+     <link rel="Stylesheet" href="./Styles.css" />
 </head>
 <body>
-    <header>
+    <header class="header">
 <h1>Personal portfolio </h1>
 <nav>
     <a href="./">Home</a>
