--- a/week 1/portfolio/index.html
+++ b/week 1/portfolio/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
 <h1>Personal portfolio </h1>
-<nav>
+<nav class="navbar">
     <a href="./">Home</a>
     <a href="./project.html">projects</a>
     <a href="./contact.html">Contact</a>
@@ -21,7 +21,7 @@
        <h1> Aamir khan</h1>
        <p>  I am a student, currently pursuing my education with a strong interest in developing my professional and technical skills. My goal is to contribute positively to society through learning, hard work, and dedication.
 </p>
-<table border="10px">
+<table class="table "border="10px">
     <thead>
         <tr>
             <th> Skills</th>
