--- a/week 2/CSSlayout.html
+++ b/week 2/CSSlayout.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS layout </title>
     <link rel="stylesheet" href="./LAYOUT.CSS">
+    <link rel="icon" type="/image/png" href="icon.png">
 </head>
 <body>
 
