--- a/week 3/restaurent website.html
+++ b/week 3/restaurent website.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bismillah Restaurant | Jamshoro</title>
-    <link rel="stylesheet" href="./bismillah restaurent.css" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
 
