--- a/week 2/restaurent website.html
+++ b/week 2/restaurent website.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
      <link rel="stylesheet" href="./location.html" />
       <link rel="stylesheet" href="./full menu.html" />
+      <script src="script.js"></script>
 </head>
 <body>
 
@@ -36,6 +37,6 @@
     <footer>
         <p>&copy; 2025 Bismillah Restaurant Jamshoro. All rights reserved.</p>
     </footer>
-
+    <script src="/script.js/" ></script>
 </body>
 </html>
