--- a/restaurant/full menu.html
+++ b/restaurant/full menu.html
@@ -16,7 +16,7 @@
         <nav>
             <div class="logo">Bismillah Restaurant</div>
             <div class="nav-links">
-                <a href="/week 3/restaurent website.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="full menu.html">Full Menu</a>
                 <a href="location.html">Location</a>
             </div>
