--- a/week 1/portfolio/project.html
+++ b/week 1/portfolio/project.html
@@ -1,11 +1,11 @@
-// projects.html
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Umar Farooq Web Developer</title>
-    <link rel="stylesheet" href="style.css">
+    <title>My Projects</title>
+
 </head>
 <body>
     <header>
@@ -46,7 +46,8 @@
         </section>
     </main>
     <footer>
-        <p>Email: <a href="Aamirdeveloperaamir@gmail.com">Aamir developer.pk</a></p>
+        <p>Email: <a href="Aamirdeveloperaamir@gmail.com">aamirdeveloperaamir@gmail.com</a></p>
+        <hr>
         <p>Copyright 2025 | All Rights Reserved | Aamir rind</p>
     </footer>
 </body>
