--- a/week 1/portfolio/contact.html
+++ b/week 1/portfolio/contact.html
@@ -1,11 +1,10 @@
 
-  // contact.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aamir Web Developer</title>
+    <title>Contact</title>
  
 </head>
 <body>
@@ -27,9 +26,10 @@
                 <label for="name">Your Name</label>
                 <input type="text" id="name">
                 <br>
+                <br>
                 <label for="email">Your Email</label>
                 <input type="email" id="email">
-                <br>
+                <br><br>
                 <label for="phone">Your Phone</label>
                 <input type="tel" id="phone">
             </fieldset>
@@ -37,15 +37,16 @@
                 <legend>Your Message</legend>
                 <label for="subject">Subject</label>
                 <input type="text" id="subject">
-                <br>
+                <br><br>
                 <label for="message">Your Message</label>
                 <textarea id="message" rows="5" cols="30"></textarea>
             </fieldset>
-            <button>Send Message</button>
+            <br>
+           <center> <button>Send Message</button> </center>
         </form>
     </main>
     <footer>
-        <p>Email: <a href="Aamirdeveloperaamir@gmail.com">aamirdeveloper.pk</a></p>
+        <p>Email: <a href="Aamirdeveloperaamir@gmail.com">aamirdeveloperaamir@gmail.com</a></p>
         <p>Copyright 2025 | All Rights Reserved | Aamir rind</p>
     </footer>
 </body>
