--- a/week 1/portfolio/index.html
+++ b/week 1/portfolio/index.html
@@ -3,25 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
      <link rel="Stylesheet" href="./Styles.css" />
 </head>
 <body>
     <header class="header">
-<h1>Personal portfolio </h1>
-<nav class="navbar">
+<h1>Personal Portfolio </h1>
+<nav class="nav-bar">
     <a href="./">Home</a>
     <a href="./project.html">projects</a>
     <a href="./contact.html">Contact</a>
 </nav>
     </header>
     <hr>
+    <br>
     <main> 
-        <img src="pic.jpg" height="200px" width="200px" />
+        <img src="pic.jpg" height="300px" width="300px" />
        <h1> Aamir khan</h1>
        <p>  I am a student, currently pursuing my education with a strong interest in developing my professional and technical skills. My goal is to contribute positively to society through learning, hard work, and dedication.
 </p>
-<table class="table "border="10px">
+<br>
+<table class="table "border="5px">
     <thead>
         <tr>
             <th> Skills</th>
@@ -30,20 +32,21 @@
     </thead>
     <tbody>
         <tr>
-            <td> Diploma in Information Technology</td>
+            <td> Frontend Developer</td>
             <td> Completed</td>
         </tr>
         <tr>
-            <td> Bachlor in software engineering</td>
+            <td> Bachelor in Software engineering</td>
             <td> Completed</td>
         </tr>
         <tr>
-            <td> Maters in software Engineering</td>
+            <td> Webdevelopment 2 Month</td>
             <td> In progress</td>
         </tr>
     </tbody>
 </table>
     </main>
+    <br>
     <hr>
     <footer>
         All Rights are Reserved | 2025
