--- a/week 1/portfolio/index.html
+++ b/week 1/portfolio/index.html
@@ -7,7 +7,7 @@
      <link rel="Stylesheet" href="./Styles.css" />
 </head>
 <body>
-    <header class="header">
+    <header>
 <h1>Personal Portfolio </h1>
 <nav class="nav-bar">
     <a href="./">Home</a>
